Zebra stripe the table

--- a/webui/src/components/ProcessList.css
+++ b/webui/src/components/ProcessList.css
@@ -5,3 +5,11 @@ td {
 td.number {
   text-align: right;
 }
+
+tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+
+table {
+  border-collapse: collapse;
+}
